# Multicore-lab1

./: CMakeLists.txt  README.md  cities10.txt  cities100.txt  cities11.txt  cities12.txt  cities13.txt  cities14.txt  cities15.txt  cities20.txt  cities3.txt  cities4.txt  cities5.txt  cities8.txt  processors_spec.txt  ptsm  ptsm.c  report.docx  report_data.xlsx  test  test.c  tsm_serial.c
